# industry-morning-report

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SOP.md  pyproject.toml  requirements.txt
.agents/skills/industry-morning-report/: SKILL.md
.agents/skills/industry-morning-report-maintainer/: SKILL.md
.agents/skills/industry-morning-report-maintainer/agents/: openai.yaml
.agents/skills/industry-morning-report-maintainer/references/: release-process.md  repository-health.md  security-boundaries.md
.agents/skills/industry-morning-report-maintainer/scripts/: privacy_scan.py
.agents/skills/industry-morning-report/agents/: openai.yaml
.agents/skills/industry-morning-report/references/: profile-schema.md  review-workflow.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
morning_report/: __init__.py  cli.py  collector.py  config.py  generator.py  lock.py  logging_utils.py  models.py  privacy.py  review_metrics.py  storage.py  validation.py
profiles/: led.json  template.json
scripts/: run_report.ps1  setup_scheduled_task.ps1
skills/industry-morning-report/: SKILL.md
skills/industry-morning-report/agents/: openai.yaml
skills/industry-morning-report/references/: profile-schema.md  security-boundaries.md
skills/industry-morning-report/scripts/: create_profile.py  privacy_scan.py
tests/: test_collector.py  test_config.py  test_generator.py  test_privacy.py  test_privacy_scan_script.py  test_review_metrics.py  test_skill_distribution.py  test_storage.py  test_validation.py
(+1 files in other folders)
